sass/modules/_counter-area.scss
.counter-area {
    position: relative;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
    z-index: 2;
    overflow: hidden;
    height: auto;
    &.bg-primary{
        position: relative;
        &:before {
            content: "";
            background: $primary-color;
            position: absolute;
            top: 0;
            left: 0;
            right: 0;
            width: 100%;
            height: 100%;
            opacity: 0.9;
            z-index: 0;
        }
    }
    .container_outter_wrapper{
        position: relative;
    }
}
.book-appointment-area {
    position: relative;
    z-index: 20;
    // margin-top: 82px;
    display: flex;
    justify-content: space-between;
    // margin-bottom: 74px;
    @include lg {
        display: grid;
        grid-template-columns: auto;
        gap: 20px;
        padding: 0px 20px;
    }
    @include md {
        display: grid;
        grid-template-columns: auto;
        gap: 20px;
        padding: 0px 20px;
    }
    @include sm {
        display: grid;
        grid-template-columns: auto;
        gap: 20px;
        padding: 0px 10px;
    }
    .book-appointment-time-desc {
        display: flex;
        justify-content: space-between;
        align-items: center;
        gap: 30px;
        .time-icon {
            flex-shrink: 0;
            height: 110px;
            width: 110px;
            display: inline-flex;
            justify-content: center;
            align-items: center;
            border-radius: 100px;
            background: rgba(255, 255, 255, 0.12);
            i {
                font-size: 60px;
                color: $white;
            }
            @include lg {
                height: 84px;
                width: 84px;
                i {
                    font-size: 32px;
                }
            }
            @include md {
                height: 84px;
                width: 84px;
                i {
                    font-size: 32px;
                }
            }
            @include sm {
                height: 84px;
                width: 84px;
                i {
                    font-size: 32px;
                }
            }
        }
        .title-desc {
            max-width: 606px;
            width: 100%;
            p {
                color: $white;
                font-family: $heading-font;
                font-size: 40px;
                font-style: normal;
                font-weight: 700;
                line-height: 50px;
                margin-bottom: 0;
            }
        }
        @include lg {
        }
        @include md {
        }
        @include sm {
            flex-direction: column;
            justify-content: left;
            align-items: start;
            row-gap: 10px;
        }
    }
}
.book-appointment-btn {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-right: 60px;
    .appointment-btn {
        background: $black;
        padding: 15px 20px;
        display: flex;
        align-items: center;
        justify-content: space-between;
        gap: 6px;
        color: $white;
        font-family: $body-font;
        font-size: 16px;
        font-style: normal;
        font-weight: 600;
        line-height: 29px;
        border-radius: 5px;
        @include transition;
        &:hover {
            background: $white;
            color: $primary-color;
        }
    }
    @include lg {
        justify-content: start;
        align-items: start;
    }
    @include md {
        justify-content: start;
        align-items: start;
        margin-bottom: 20px;
    }
    @include sm {
        justify-content: start;
        align-items: start;
        margin-bottom: 20px;
    }
}
.fun-fact-box{
    padding: 40px;
    padding-top: 0;
    background-color: #272224;
    border-radius: 0 0 20px 20px;
    // z-index: 10;
    // position: relative;
}
.counter-items-box {
    padding: 54px 96px;
    z-index: 20;
    border-radius: 0px 0px 20px 20px;
    border: 1px solid #635F61;
    @include sm{
        padding: 0;
    }
    .elementor-container{
        display: flex;
        @include md{
            flex-wrap: wrap !important;
            gap: 30px 0;
            justify-content: space-between;
        }
        @include sm {
            padding: 30px;
            flex-direction: column;
        }
        @include lg {
            flex-wrap: wrap;
            grid-row-gap: 30px;
        }
        .elementor-column{
            @include sm{
                width: 100% !important;
            }
            @include md{
                width: 50% !important;
            }
            @include lg{
                width: 50% !important;
            }
        }
    }
    @include md {
        padding: 50px 58px 55px 57px;
        margin: 0px;
        display: flex;
        flex-wrap: wrap;
        // grid-template-columns: auto auto;
        gap: 30px;
    }
    @include sm {
        // padding: 14px;
        // display: flex;
        // flex-wrap: wrap;
        // align-items: center;
        // justify-content: center;
        // gap: 20px;
    }
   
    &.style-2{
        display: flex;
        justify-content: space-between;
        align-items: center;
    }
   
}
.top-icon {
    position: absolute;
    // left: -35% !important;
        @include sm{
            left: -27% !important;
        }
        @include md{
            left: -34% !important;
        }
        @include lg{
            left: -38% !important;
        }
        @include xl{
            left: -39% !important;
        }
    }
.bottom-icon {
        position: absolute;
        right: 0% + 18%;
        bottom: 53%;
        margin-right: 20px;
        @include sm{
            bottom: unset !important;
            top: 312px !important;
            left: 25% !important;
        }
        @include md{
            left: unset !important;
            right: -34% !important;
            bottom: 0px !important;
            top: 186px !important;
        }
        @include lg{
            bottom: unset !important;
            right: -38% !important;
            left: unset !important;
            top: 188px !important;
        }
        @include xl{
            right: -39% !important;
            left: unset !important;
        }
}
.side-image {
    z-index: 2;
    overflow: hidden;
    height: auto;
    position: absolute;
    right: 0;
    height: 100%;
    z-index: 10;
    // width: 314px;
    margin-right: 31px;
    bottom: 0;
    @include rmaxwd(1450) {
        display: none !important;
    }
}
// .counter-items-box-test {
//     position: relative;
//     padding: 53px 96px 94px 95px;
//     z-index: 20;
//     display: flex;
//     justify-content: space-between;
//     align-items: center;
//     background: rgba(17, 24, 33, 0.9);
//     border-radius: 0px 0px 20px 20px;
//     &:before{
//         content: "";
//         position: absolute;
//         height: calc(100% - 40px);
//         top: 0;
//         left: 0;
//         padding: 0px 37px 38px 38px;
//         border: 1px solid rgba(255, 255, 255, 0.15);
//         border-top: none;
//         width: calc(100% - 80px);
//         right: 0;
//         display: flex;
//         align-items: center;
//         justify-content: center;
//         margin: 0 auto;
//         border-radius: 0px 0px 20px 20px;
//     }
//     @include sm {
//         padding: 50px 58px 55px 57px;
//         flex-direction: column;
//     }
//     @include lg {
//         display: grid;
//         grid-template-columns: auto auto;
//         grid-row-gap: 30px;
//     }
//     @include md {
//         padding: 50px 58px 55px 57px;
//         margin: 0px;
//         display: flex;
//         flex-wrap: wrap;
//         // grid-template-columns: auto auto;
//         gap: 30px;
//     }
//     @include sm {
//         // padding: 14px;
//         // display: flex;
//         // flex-wrap: wrap;
//         // align-items: center;
//         // justify-content: center;
//         // gap: 20px;
//     }
//     .top-icon {
//         position: absolute;
//         top: 0;
//         left: 40px;
//     }
//     .bottom-icon {
//         position: absolute;
//         right: 40px;
//         bottom: 40px;
//         margin-right: 20px;
//     }
// }
// .fun-fact-area {
//     position: relative;
//     top: 0;
//     height: auto;
    
//     .shape-1 {
//         position: absolute;
//         bottom: 0;
//         right: 0;
//         width: 206px;
//         height: 217px;
//         transform: translate(50%, 50%);

//         @include rmaxwd(991) {
//             display: none;
//         }
//         @media only screen and (min-width: 992px) and (max-width: 1399px){
//             transform: translate(0, 50%);
//         }
//     }
//     .fun-fact-box {
//         position: relative;
//         height: auto;
//         border-radius: 0px 0px 20px 20px;
//         border: 1px solid $black-200;
//         border-top: 1px solid $black;
//         //border-top: none;
//         // margin: 0px 40px 40px 40px;
        
//     }
// }
.counter-card {
    display: flex;
    gap: 17px;
    align-items: center;
    position: relative;
    z-index: 10;
    @include sm {
        width: 100%;
        justify-content: space-between;
    }
    .icon {
        display: flex;
        justify-content: center;
        align-items: center;
        font-size: 80px;
        color: $white;
    }
    .content {
        @include sm {
            display: inline-flex;
            flex-direction: column;
            align-items: center;
            justify-content: center;
        }
        .counter {
            color: $white;
            font-family: $heading-font;
            font-size: 70px;
            font-style: normal;
            font-weight: 700;
            line-height: 72px;
            @include xl{
                font-size: 58px;
            }
        }
        .content-title {
            flex: 50%;
            color: $primary-color;
            font-family: $body-font;
            font-size: 16px;
            font-weight: 400;
            @include xl{
                font-size: 14px;
            }
        }
    }
}

